// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField renders snapshot of inverted 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #FFFFFF;
  margin-bottom: 8px;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  line-height: 1.5;
  margin-bottom: 8px;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 1.25;
  margin-top: -4px;
}

.emotion-3 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-3::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #FFFFFF;
  background-color: #213147;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-4:disabled {
  cursor: default;
}

.emotion-4:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-4::-webkit-search-decoration,
.emotion-4::-webkit-search-cancel-button,
.emotion-4::-webkit-search-results-button,
.emotion-4::-webkit-search-results-decoration {
  display: none;
}

.emotion-4::-ms-clear,
.emotion-4::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-4::placeholder {
  opacity: 1;
  color: #9BA3AB;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Favorite singer
  </label>
  <p
    class="emotion-2"
  >
    Additional description
  </p>
  <div
    class="emotion-3"
  >
    <input
      class="emotion-4"
      id="form-control-123abC"
    />
  </div>
</div>
`;

exports[`TextField renders snapshot of password type 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-3:disabled {
  cursor: default;
}

.emotion-3:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-3::-webkit-search-decoration,
.emotion-3::-webkit-search-cancel-button,
.emotion-3::-webkit-search-results-button,
.emotion-3::-webkit-search-results-decoration {
  display: none;
}

.emotion-3::-ms-clear,
.emotion-3::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-3::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-3::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-3:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-3::placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: auto;
  cursor: pointer;
  padding: 0;
  border: 0;
  border-radius: 4px;
  padding: 2px;
  margin-right: -2px;
  background-color: transparent;
  color: inherit;
  outline: 0;
}

.emotion-5:disabled {
  cursor: inherit;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Password
  </label>
  <div
    class="emotion-2"
  >
    <input
      autocomplete="new-password"
      class="emotion-3"
      id="form-control-123abC"
      spellcheck="false"
      type="password"
    />
    <div
      class="emotion-4"
    >
      <button
        aria-label="Show password text"
        class="emotion-5"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="16"
          viewBox="0 0 18 18"
          width="16"
        >
          <path
            d="M9 14c3.866 0 7-4.367 7-5s-3.134-5-7-5-7 4.102-7 5c0 .898 3.134 5 7 5Zm0 2c-4.209 0-9-4.303-9-7s4.791-7 9-7c4.142 0 9 4.49 9 7s-4.858 7-9 7Zm0-4a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TextField renders snapshot of required with error 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  font-size: 12px;
  color: #65707C;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: right;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3 {
  font-size: 14px;
  color: #DD3400;
}

.emotion-4 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-4::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #DD3400;
  box-shadow: 0 0 0 1px #DD3400;
}

.emotion-5:disabled {
  cursor: default;
}

.emotion-5:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-5::-webkit-search-decoration,
.emotion-5::-webkit-search-cancel-button,
.emotion-5::-webkit-search-results-button,
.emotion-5::-webkit-search-results-decoration {
  display: none;
}

.emotion-5::-ms-clear,
.emotion-5::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-5::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-5::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-5:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-5::placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-6 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  position: absolute;
  z-index: 1;
  bottom: -8px;
  left: 0;
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  color: #C01100;
  line-height: 1.25;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Favorite singer
    <span
      aria-hidden="true"
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        •
      </span>
       Required
    </span>
  </label>
  <div
    class="emotion-4"
  >
    <input
      aria-describedby="form-control-error-123abC"
      aria-errormessage="form-control-error-123abC"
      aria-invalid="true"
      class="emotion-5"
      id="form-control-123abC"
      required=""
    />
  </div>
  <p
    class="emotion-6"
    id="form-control-error-123abC"
  >
    Enter correct singer name.
  </p>
</div>
`;

exports[`TextField renders snapshot of search type 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-2::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-3 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  left: 12px;
  color: #05192D;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 36px;
  padding-right: 12px;
}

.emotion-4:disabled {
  cursor: default;
}

.emotion-4:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-4::-webkit-search-decoration,
.emotion-4::-webkit-search-cancel-button,
.emotion-4::-webkit-search-results-button,
.emotion-4::-webkit-search-results-decoration {
  display: none;
}

.emotion-4::-ms-clear,
.emotion-4::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Search
  </label>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-3"
    >
      <svg
        aria-hidden="true"
        data-testid="search-icon"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="m13.26 12.303 4.408 3.953a1 1 0 0 1-1.336 1.488L11.78 13.66a7.5 7.5 0 1 1 1.482-1.358ZM7.5 13a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="emotion-4"
      id="form-control-123abC"
      type="search"
    />
  </div>
</div>
`;

exports[`TextField renders snapshot with label and description 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
}

.emotion-1 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 1.25;
  font-weight: 800;
  color: #05192D;
  margin-bottom: 8px;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  line-height: 1.5;
  margin-bottom: 8px;
  color: #05192D;
  font-size: 14px;
  line-height: 1.25;
  margin-top: -4px;
}

.emotion-3 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-3::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-4:disabled {
  cursor: default;
}

.emotion-4:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-4::-webkit-search-decoration,
.emotion-4::-webkit-search-cancel-button,
.emotion-4::-webkit-search-results-button,
.emotion-4::-webkit-search-results-decoration {
  display: none;
}

.emotion-4::-ms-clear,
.emotion-4::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-4::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-4::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <label
    class="emotion-1"
    for="form-control-123abC"
  >
    Favorite singer
  </label>
  <p
    class="emotion-2"
  >
    Additional description
  </p>
  <div
    class="emotion-3"
  >
    <input
      class="emotion-4"
      id="form-control-123abC"
      placeholder="Taylor Swift"
    />
  </div>
</div>
`;
